services/arso-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arso-service
  labels:
    app: arso-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arso-service
  template:
    metadata:
      labels:
        app: arso-service
    spec:
      containers:
        - name: arso-service
          image: zln00/arso-service:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
