services/arso-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arso-service
spec:
  selector:
    app: arso-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
